fix: add a missing background

--- a/src/sass/layout/_map.scss
+++ b/src/sass/layout/_map.scss
@@ -1,5 +1,9 @@
 .map {
   background-color: lighten($primary, 10%);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url(../img/map-bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   padding-bottom: 65px;
 
   @media (max-width: $tablet-width) {
